# techcrunch

./: README.md  pyproject.toml  requirements.txt
techcrunch/: __init__.py  __main__.py  feeds.py  scraper.py  search.py  tui.py
