[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "techcrunch"
version = "1.0.0"
description = "Terminal UI for TechCrunch : browse category feeds and read articles in the CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Vishal Venkat" }]
keywords = ["techcrunch", "tui", "terminal", "news", "textual"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "requests>=2.28",
  "textual>=8.0",
]

[project.scripts]
techcrunch = "techcrunch.tui:run_app"
